Made schedule width 80% like rest of page, fixed any overlap issues arrising from this.

--- a/src/styles/schedule.css
+++ b/src/styles/schedule.css
@@ -1,8 +1,10 @@
 #schedule {
-    width: 100%;
+    width: 80%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #schedule > h3 {
@@ -38,14 +40,26 @@
     border-bottom: 0.15rem solid #777777;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
+    #schedule {
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #schedule table {
+        padding-right: 5px;
+        padding-left: 5px;
+    }
+    
     #schedule td:first-child {
         font-size: 1.5rem;
+        margin-right: 15px;
     }
 
     #schedule td:last-child {
         font-size: 0.75rem;
-        width: 250px;
+        width: 100px;
         text-align: right;
         white-space: normal;
         word-break: break-word;
